# Software-System-Lab-Work

Bash-Scripting/: Q4.sh  Readme.txt  compute_inc.sh  count_files.sh  makePasswordless.sh  ohwhattime.sh  print_header_files.sh  script_compile.sh  system_spec.sh
BigInteger_Threads-Java/: NthRoot.java  Readme.txt  SolveBigEquation.java
BigInteger_Threads-Java/Q2(a)/: Book.java  ReadWriter.java  Reader.java  Writer.java
BigInteger_Threads-Java/Q2(b)/: Book.java  ReadWriter.java  Reader.java  Writer.java
Cmake/: CMakeLists.txt  cmakeSubmit.txt  make.txt  makefile_g14  readme.txt  square_and_addConfig.cmake
GDB_pyplot/: Readme.txt  correct.c  create_data.sh  fip.cpp  log.txt  plot.py
Gprof_Doxygen/: Readme.txt  gmon.out  output.dot  test_gprof.c  test_gprof_new.c
Gprof_Doxygen/cs251_base_code_Q_3/doc/: debufVersion_after.txt  report.tex
Gprof_Doxygen/cs251_base_code_Q_3/src/: dominos.cpp  render.cpp
Java_Swings/: Readme
Project_Proposall/: GayatriMantra.dn  ProjectProposal.tex  gradient_descent.m  makefile  plot.gnu  readme.txt  refer.bib
Python-Git/: Readme.txt  comment_finder.py  fetch_data.py  log.txt  marks_sorted.csv  readme.txt  txt_to_csv.py
RSA_Implementaton_Java/: output.txt
RSA_Implementaton_Java/cs251_base_code_Q1/: Makefile
RSA_Implementaton_Java/cs251_base_code_Q1/doc/: Doxyfile  doxygen_sqlite3.db
RSA_Implementaton_Java/cs251_base_code_Q1/src/: dominos.cpp  render.cpp
RSA_Implementaton_Java/cs251_base_code_Q_3/: Makefile  makefile.release
Sudoku-Solver/: Readme.txt  Readme.txt~  sudoku2.html  sudoku2.js
(+117 files in other folders)
